edited file db.properties

--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,8 +1,8 @@
 #MySQL properties
-db.driver=com.mysql.cj.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/ticket_app?serverTimeZone=UTC
-db.user=root
-db.password=1234
+db.driver=your.db.driver
+db.url=your.db.url
+db.user=your.db.user
+db.password=your.db.password
 
 #Hibernate properties
 hibernate.show_sql=true
